# fiscal-tools

./: .gitignore  README.md  setup.cfg  setup.py
afip/: cuit.py
afip/tests/: test_cuit.py
test/: cuit_test.py
