[metadata]
name = fiscal-tools
version = 0.1.0
author = Mario Mori
author_email = mariomori@alopexmm.com.ar
description = Fiscal library for projects
url = https://github.com/AlopexMM/fiscal-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = afip

